syntax = "proto3";
package goshare.spider;

option go_package = "github.com/mineralres/goshare/pkg/pb/spider";

message HotStockItem {
  double change    = 1;
  string exchange  = 2;
  string symbol    = 3;
  double current   = 4;
  double increment = 5;
  string name      = 6;
  double percent   = 7;
  int32  type      = 8;
  double value     = 9;
}

message HotStockList {
  repeated HotStockItem global_h1  = 1;
  repeated HotStockItem global_h24 = 2;
  repeated HotStockItem ashare_h1  = 3;
  repeated HotStockItem ashare_h24 = 4;
}

// 分红配送
message Bonus {
  int64  ashare_ex_dividend_date = 1;
  int64  cancle_dividend_date    = 2;
  int64  dividend_date           = 3;
  string dividend_year           = 4;
  int64  equity_date             = 5;
  int64  ex_dividend_date        = 6;
  string plan_explain            = 7;
  double dividend_cash           = 8;
  double dividend_share          = 9;
}